--- a/index.html
+++ b/index.html
@@ -240,5 +240,8 @@
             }
         }
     </script>
+    <img src=" https://github.com/Rahulkrishnanj/Chendaclass/blob/9e520aed33cb2e2a4802c60e5fa175a66b9a3ae6/IMG_2641.jpg" alt=”IMG_2641”
+        width="100%" 
+        height="600px">
 </body>
 </html>
