--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
     <script>
         const pdfFiles = {
-    "ABHAYJITH": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ABHAYJITH.pdf",
+    "ABHAYJITH": "https://github.com/Rahulkrishnanj/Chendaclass/blob/62252c35abc81a1c4f763e984915541860de679a/IMG_2641.jpg",
     "ABHIJITH": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ABHIJITH.pdf",
     "ABHIMANYU": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ABHIMANYU.pdf",
     "ABHINAV KIRAN": "https://raw.github.com/Rahulkrishnanj/Chendaclass/blob/main/ABHINAV%20KIRAN.pdf",
@@ -240,8 +240,5 @@
             }
         }
     </script>
-    <img src=" https://github.com/Rahulkrishnanj/Chendaclass/blob/9e520aed33cb2e2a4802c60e5fa175a66b9a3ae6/IMG_2641.jpg" alt=”IMG_2641”
-        width="100%" 
-        height="600px">
 </body>
 </html>
