--- a/index.html
+++ b/index.html
@@ -169,56 +169,74 @@
 
     <script>
         const pdfFiles = {
-    "ABHAYJITH": "https://github.com/Rahulkrishnanj/Chendaclass/blob/62252c35abc81a1c4f763e984915541860de679a/IMG_2641.jpg",
-    "ABHIJITH": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ABHIJITH.pdf",
-    "ABHIMANYU": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ABHIMANYU.pdf",
-    "ABHINAV KIRAN": "https://raw.github.com/Rahulkrishnanj/Chendaclass/main/ABHINAV%20KIRAN.pdf",
-    "ADIDEV S G": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ADIDEV%20S%20G.pdf",
-    "ADIRATH": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ADIRATH.pdf",
-    "ADITHAYAN A S": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ADITHAYAN%20A%20S.pdf",
-    "ADITHYA A ABHILASH": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ADITHYA%20A%20ABHILASH.pdf",
-    "ADITHYAN A": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ADITHYAN%20A.pdf",
-    "ADITHYAN B S": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ADITHYAN%20B%20S.pdf",
-    "ADITHYAN R S": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ADITHYAN%20R%20S.pdf",
-    "ADITHYAN S M": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ADITHYAN%20S%20M.pdf",
-    "ADWAITH": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ADWAITH.pdf",
-    "ADWAITH R P": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ADWAITH%20R%20P.pdf",
-    "AKHIL B": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/AKHIL%20B.pdf",
-    "AKHIL SANTHOSH": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/AKHIL%20SANTHOSH.pdf",
-    "ANANTHAKRISHNAN S": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ANANTHAKRISHNAN%20S.pdf",
-    "ANU": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ANU.pdf",
-    "ARAV SHANKAR A": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ARAV%20SHANKAR%20A.pdf",
-    "ARAVIND": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ARAVIND.pdf",
-    "ARJUN R": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ARJUN%20R.pdf",
-    "ARUSH P R": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ARUSH%20P%20R.pdf",
-    "ARYA A": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ARYA%20A.pdf",
-    "ASWANTH B": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ASWANTH%20B.pdf",
-    "ASWIN R": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ASWIN%20R.pdf",
-    "ASWIN V": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ASWIN%20V.pdf",
-    "ATHUL A M": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ATHUL%20A%20M.pdf",
-    "ATHUL A S": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ATHUL%20A%20S.pdf",
-    "DEVA NAND PRADEEP": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/DEVA%20NAND%20PRADEEP.pdf",
-    "DEVA NARAYANAN": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/DEVA%20NARAYANAN.pdf",
-    "DEVANANDA P": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/DEVANANDA%20P.pdf",
-    "DEVA NAND M R": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/DEVA%20NAND%20M%20R.pdf",
-    "DIPIN D": "https://drive.google.com/file/d/1Eek3xzIIsfjNW3g1LVPM10hWQakZ-_S0/view?usp=drive_link",
-    "DRUV HARI M": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/DRUV%20HARI%20M.pdf",
-    "DYAN HARI M": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/DYAN%20HARI%20M.pdf",
-    "GURUMITHRAN D L": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/GURUMITHRAN%20D%20L.pdf",
-    "JANADATHAN D L": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/JANADATHAN%20D%20L.pdf",
-    "KASHINADH C S SREEKUTTY": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/KASHINADH%20C%20S%20SREEKUTTY.pdf",
-    "KASHINADH S N": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/KASHINADH%20S%20N.pdf",
-    "KASHINATH S S": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/KASHINATH%20S%20S.pdf",
-    "MADHAV A S": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/MADHAV%20A%20S.pdf",
-    "MANOJ": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/MANOJ.pdf",
-    "MIDHUN": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/MIDHUN.pdf",
-    "NIHARA R B": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/NIHARA%20R%20B.pdf",
-    "NIRANJAN B A": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/NIRANJAN%20B%20A.pdf",
-    "RAHUL KRISHNA": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/RAHUL%20KRISHNA.pdf",
-    "RAJATH KRISHNA": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/RAJATH%20KRISHNA.pdf",
-
-            // Add mappings for all other students here...
-        };
+    "ABHAYJITH": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ABHAYJITH.pdf",
+        "ABHIJITH": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ABHIJITH.pdf",
+        "ABHIMANYU": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ABHIMANYU.pdf",
+        "ABHINAV KIRAN": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ABHINAV%20KIRAN.pdf",
+        "ADIDEV S G": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ADIDEV%20S%20G.pdf",
+        "ADIRATH": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ADIRATH.pdf",
+        "ADITHAYAN A S": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ADITHAYAN%20A%20S.pdf",
+        "ADITHYA A ABHILASH": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ADITHYA%20A%20ABHILASH.pdf",
+        "ADITHYAN A": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ADITHYAN%20A.pdf",
+        "ADITHYAN B S": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ADITHYAN%20B%20S.pdf",
+        "ADITHYAN R S": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ADITHYAN%20R%20S.pdf",
+        "ADITHYAN S M": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ADITHYAN%20S%20M.pdf",
+        "ADWAITH": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ADWAITH.pdf",
+        "ADWAITH R P": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ADWAITH%20R%20P.pdf",
+        "AKHIL B": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/AKHIL%20B.pdf",
+        "AKHIL SANTHOSH": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/AKHIL%20SANTHOSH.pdf",
+        "ANANTHAKRISHNAN S": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ANANTHAKRISHNAN%20S.pdf",
+        "ANU": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ANU.pdf",
+        "ARAV SHANKAR A": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ARAV%20SHANKAR%20A.pdf",
+        "ARAVIND": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ARAVIND.pdf",
+        "ARJUN R": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ARJUN%20R.pdf",
+        "ARUSH P R": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ARUSH%20P%20R.pdf",
+        "ARYA A": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ARYA%20A.pdf",
+        "ASWANTH B": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ASWANTH%20B.pdf",
+        "ASWIN R": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ASWIN%20R.pdf",
+        "ASWIN V": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ASWIN%20V.pdf",
+        "ATHUL A M": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ATHUL%20A%20M.pdf",
+        "ATHUL A S": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/ATHUL%20A%20S.pdf",
+        "DEVA NAND PRADEEP": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/DEVA%20NAND%20PRADEEP.pdf",
+        "DEVA NARAYANAN": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/DEVA%20NARAYANAN.pdf",
+        "DEVANANDA P": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/DEVANANDA%20P.pdf",
+        "DEVA NAND M R": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/DEVA%20NAND%20M%20R.pdf",
+        "DIPIN D": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/DIPIN%20D.pdf",
+        "DRUV HARI M": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/DRUV%20HARI%20M.pdf",
+        "DYAN HARI M": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/DYAN%20HARI%20M.pdf",
+        "GURUMITHRAN D L": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/GURUMITHRAN%20D%20L.pdf",
+        "JANADATHAN D L": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/JANADATHAN%20D%20L.pdf",
+        "KASHINADH C S SREEKUTTY": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/KASHINADH%20C%20S%20SREEKUTTY.pdf",
+        "KASHINADH S N": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/KASHINADH%20S%20N.pdf",
+        "KASHINATH S S": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/KASHINATH%20S%20S.pdf",
+        "MADHAV A S": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/MADHAV%20A%20S.pdf",
+        "MANOJ": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/MANOJ.pdf",
+        "MIDHUN": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/MIDHUN.pdf",
+        "NIHARA R B": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/NIHARA%20R%20B.pdf",
+        "NIRANJAN B A": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/NIRANJAN%20B%20A.pdf",
+        "RAHUL KRISHNA": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/RAHUL%20KRISHNA.pdf",
+        "RAJATH KRISHNA": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/RAJATH%20KRISHNA.pdf",
+        "SABARI S": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/SABARI%20S.pdf",
+        "SANJAY SANTHOSH": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/SANJAY%20SANTHOSH.pdf",
+        "SANUSH": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/SANUSH.pdf",
+        "SARGA C S": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/SARGA%20C%20S.pdf",
+        "SIDHARTH P NAIR": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/SIDHARTH%20P%20NAIR.pdf",
+        "SIDHARTH S": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/SIDHARTH%20S.pdf",
+        "SIVADATH B": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/SIVADATH%20B.pdf",
+        "SIVARATH L": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/SIVARATH%20L.pdf",
+        "SOORYANARAYANAN": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/SOORYANARAYANAN.pdf",
+        "SREEHARI A M": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/SREEHARI%20A%20M.pdf",
+        "SREEHARI G M": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/SREEHARI%20G%20M.pdf",
+        "THEJAS": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/THEJAS.pdf",
+        "VAISHNAV M C": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/VAISHNAV%20M%20C.pdf",
+        "VAISHNAV V": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/VAISHNAV%20V.pdf",
+        "VIDHUKRISHNAN P": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/VIDHUKRISHNAN%20P.pdf",
+        "VIGNESH S A": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/VIGNESH%20S%20A.pdf",
+        "DEVANAND V S": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/DEVANAND%20V%20S.pdf",
+        "VAIBHAV V": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/VAIBHAV%20V.pdf",
+        "PRATHISH S": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/main/PRATHISH%20S.pdf",
+        // Add remaining student entries here...
+    };
 
         function checkReport() {
             const studentId = document.getElementById("studentId").value;
