--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         /* Navigation bar styling */
         .navbar {
             width: 100%;
-            background-color: #f6f99b;
+            background-color: #fffffff0;
             overflow: hidden;
             text-align: center;
             margin-top: 10px;
@@ -68,7 +68,7 @@
             font-family: Bahnschrift SemiBold;
         }
         .navbar a:hover {
-            background-color: #ffc320;
+            background-color: #e5e5e5;
         }
 
         /* Form styling */
