--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalaakshethra</title>
+    <link rel="stylesheet" href="">
     <style>
         /* Reset and general styling */
         * {
@@ -133,9 +134,13 @@
         <a href="#">Home</a>
         <a href="#">Class</a>
         <a href="#">Fee Details</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
         <a href="#">Time</a>
     </div>
+    
+    <section class="main-section">
+        <p>Click on the "Contact" link to view contact details.</p>
+    </section>
 
     <div id="checkForm" class="input-name">
         <h3>Student's Pending Fee Report</h3>
