--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Details</title>
-    <link rel="stylesheet" href="C:\Users\rahul\Desktop\CODING\Style.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="Homecode.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">About</a></li>
         </ul>
