--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,7 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="index.html">Back</a></li>
         </ul>
     </nav>
     <section id="contact" class="contact-section">
