--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <a href="#">Class</a>
         <a href="#">Fee Details</a>
         <a href="contact.html">Contact</a>
-        <a href="#">Time</a>
+        <a href="Profile.html">Profile</a>
     </div>
     
     <section class="main-section">
