--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalaakshethra</title>
     <link rel="stylesheet" href="style.css">
+    <link ref="stylesheet" href="Stylesprof.css">
     <style>
         /* Reset and general styling */
         * {
