--- a/Profile.html
+++ b/Profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Profile</title>
-    <link rel="stylesheet" href="stylesprof.css">
+    <link rel="stylesheet" href="Stylesprof.css">
 </head>
 <body>
     <div class="profile-container">
@@ -87,7 +87,7 @@
             <br>
             <!-- Photo Box -->
             <div class="field-box photo-box">
-                <img src="D:\00_Work\RAHUL K\Passport photos\RK-Web.jpg" alt="Student Photo">
+                <img src="RK-Web.jpg" alt="Student Photo">
             </div>
             <!-- Student Details -->
             <div class="field-box">
