--- a/Profile.html
+++ b/Profile.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="Stylesprof.css">
 </head>
 <body>
+    <nav class="navbar">
+        <ul>
+            <li><a href="Homecode.html">Back</a></li>
+            
+        </ul>
+    </nav>
     <div class="profile-container">
         <h1>Student Profile</h1>
         <div class="profile-card">
