--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
         /* Header styling */
         h1 {
-            color: #ffc258; /* Creme color */
-            font-size: 30px;
+               color: #ffffff; /* Creme color */
+            font-size: 50px;
             text-align: center;
             margin-bottom: 10px;
             font-family: keraleeyam;
             font-weight: normal;
-            text-shadow: 5px 5px 10px #060606;
+            text-shadow: 5px 5px 8px #000000;
         }
         h3 {
             color:#400a76
@@ -63,7 +63,7 @@
         .navbar a {
             display: inline-block;
             color: rgb(31, 0, 107);
-            padding: 4px 10px;
+            padding: 8px 10px;
             text-decoration: none;
             font-size: 18px;
             font-weight: bold;
