--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Details</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="C:\Users\rahul\Desktop\CODING\Style.css">
 </head>
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="index.html">Back</a></li>
+            <li><a href="Homecode.html">Back</a></li>
+            
         </ul>
     </nav>
     <section id="contact" class="contact-section">
