--- a/Homecode.html
+++ b/Homecode.html
@@ -156,7 +156,7 @@
 
 <body>
     <div class="image-box" style="position: relative; text-align: center; width: fit-content; padding: 0px;">
-        <img src="https://github.com/Rahulkrishnanj/Chendaclass/blob/1df1c0f73704e4927fea09dfb4f9852687231f4b/Pmr.jpg" alt="Pulimathoor Mahadeva Temple" style="width: 100%; height: auto; display: block;">
+        <img src="Pmr.jpg" alt="Pulimathoor Mahadeva Temple" style="width: 100%; height: auto; display: block;">
         <h1 style="position: absolute; top: 80%; left: 50%; transform: translate(-50%, -50%); color: white; background-color: rgba(0, 0, 0, 0.5); border-radius: 25px;">PULIMATHOOR SREE MAHADEVA TEMPLE</h1>
         <P style="position: absolute; top: 92%; left: 50%; transform: translate(-50%, -50%); color: white; background-color: rgba(0, 0, 0, 0.5); border-radius: 25px;">Nannattukavu, Pothencode</P>
     </div>
