--- a/profexceldata.html
+++ b/profexceldata.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="Homecode.html">Back</a></li>
+            <li><a href="index.html">Back</a></li>
 
             <!-- File Upload -->
             <li class="right"><input type="file" id="excelFile" accept=".xlsx, .xls" onchange="loadDropdown(event)"></li>
