--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             margin: 0;
             padding: 0;
             background: linear-gradient(to bottom, #041739, #176643);
-            background-size: 2000px 1100px ;
+            background-size: 100% 100% ;
             background-repeat: no-repeat;
             flex-direction: column;
             height: 1100px; /* Ensure the body height is explicitly set */
@@ -56,7 +56,7 @@
 
         /* Navigation bar styling */
         .navbar {
-            width: 30%;
+            width: 500%;
             background-color: #fffffff0;
             overflow: hidden;
             text-align: center;
@@ -156,9 +156,9 @@
 </head>
 
 <body>
-    <div class="image-box" style="position: relative; text-align: center; width: fit-content; padding: 0px;">
+    <div class="image-box" style="position: relative; text-align: center; width: fit-content; padding: 0px; margin-block-end: 0%">
         <img src="Pmr.jpg" alt="Pulimathoor Mahadeva Temple" style="width: 100%; height: auto; display: block;">
-        <h1 style="position: absolute; top: 85%; left: 50%; transform: translate(-50%, -50%); color: white; background-color: rgba(0, 0, 0, 0.5); border-radius: 25px;">PULIMATHOOR SREE MAHADEVA TEMPLE</h1>
+        <h1 style="position: absolute; top: 70%; left: 50%; transform: translate(-50%, -50%); color: white; background-color: rgba(0, 0, 0, 0.5); border-radius: 25px;">PULIMATHOOR SREE MAHADEVA TEMPLE</h1>
         <P style="position: absolute; top: 92%; left: 50%; transform: translate(-50%, -50%); color: white; background-color: rgba(0, 0, 0, 0.5); border-radius: 25px;">Nannattukavu, Pothencode</P>
     </div>
     
