--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             margin: 0;
             padding: 0;
             background: linear-gradient(to bottom, #041739, #176643);
+            background-size: cover;
+            background-position: center;
             background-repeat: no-repeat;
-            flex-direction: column;
+            flex-direction: column
         }
 
         /* Header styling */
@@ -56,11 +58,13 @@
             background-color: #fffffff0;
             overflow: hidden;
             text-align: center;
+            margin-top: 10px;
+            margin-bottom: 40px;
         }
         .navbar a {
             display: inline-block;
             color: rgb(31, 0, 107);
-            padding: 4px 10px;
+            padding: 8px 10px;
             text-decoration: none;
             font-size: 18px;
             font-weight: bold;
