--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 const password = prompt("Enter your password:");
 
                  // Validate username and password
-                if (username === "fees" && password === "1234") {
+                if (username === "admin" && password === "1234") {
                     // Redirect to the Fee Entry page
                      window.location.href = "https://forms.gle/gSK6vwfyTCLYbxto7";
                  } else {
