--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,11 @@
             <p><strong>Mob:</strong> 70120 59570</p>
         </div>
         <div class="contact-card">
+            <h3>Amal Krishna</h3>
+            <p><strong>Role:</strong> Teacher</p>
+            <p><strong>Mob:</strong> 89439 01444</p>
+        </div>
+        <div class="contact-card">
             <h3>Sandeep</h3>
             <p><strong>Role:</strong> Convenor of Kalakshethra</p>
             <p><strong>Mob:</strong> 98477 62084</p>
