--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             margin: 0;
             padding: 0;
             background: linear-gradient(to bottom, #041739, #176643);
+            background-image: url('https://files.yappe.in/place/full/pulimathoor-mahadeva-temple-9984549.webp');
+            background-size: cover;
+            background-position: top;
+            height: 60vh;
+            display: flex;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
