--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             margin: 0;
             padding: 0;
             background: linear-gradient(to bottom, #041739, #176643);
-            background-image: url('https://files.yappe.in/place/full/pulimathoor-mahadeva-temple-9984549.webp');
+            background-image: url('Artboaed.jpg');
             background-size: cover;
             background-position: top;
             height: 60vh;
