--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             margin: 0;
             padding: 0;
             background: linear-gradient(to bottom, #041739, #176643);
-            background-image: url('https://github.com/Rahulkrishnanj/Chendaclass/blob/d73ea73f877583adc668288fe5b6ea1a73eeee52/Artboard.jpg');
+            background-image: url(''https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/Chenda/Artboard.jpg';
             background-size: cover;
             background-position: top;
             height: 60vh;
