--- a/profexceldata.html
+++ b/profexceldata.html
@@ -78,6 +78,13 @@
         <strong>Total Pending Fees (₹):</strong>
         <div id="pending-fees" class="detail-box"></div>
     </div>
+     <!-- Action Buttons -->
+     <div class="button-box">
+        <button id="view-report"><a href="contact.html">View Fees Report</a></button>
+        <button id="pay-fees">Pay Pending Fees</button>
+    </div>
+    <br>
+    <br>
 
     <script>
         let studentData = []; // Store Excel data
