--- a/profexceldata.html
+++ b/profexceldata.html
@@ -81,7 +81,7 @@
      <!-- Action Buttons -->
      <div class="button-box">
         <button id="view-report"><a href="contact.html">View Fees Report</a></button>
-        <button id="pay-fees">Pay Pending Fees</button>
+        <button id="pay-fees"><a href="upi.html">Pay Pending Fees</a></button>
     </div>
     <br>
     <br>
