--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             font-size: 40px;
             text-align: center;
             margin-bottom: 10px;
-            font-family: keraleeyam;
+            font-family: Keraleeyam-Regular.ttf;
             font-weight: normal;
             text-shadow: 5px 5px 8px #000000;
         }
