--- a/report.html
+++ b/report.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalaakshethra</title>
-    <link rel="stylesheet" href="Stylereport.css">
+    <link rel="stylesheet" href="stylereport.css">
     <link rel="stylesheet" href="navbar.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.17.269/pdf.min.js"></script>
     
