--- a/report.html
+++ b/report.html
@@ -13,8 +13,8 @@
 <body>
     <!-- Navigation Bar -->
     <div class="navbar">
-        <a href="#" class="left">Back</a>
-        <a href="#" class="right">Home</a>
+        <a href="#profexceldata.html" class="left">Back</a>
+        <a href="#index.html" class="right">Home</a>
     </div>
     <br>  
     <h2>Chenda Class Student Portal</h2>
