--- a/upi.html
+++ b/upi.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="upicss.css">
 </head>
 <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <a href="profexceldata.html" class="nav-link">Back</a>
+        <a href="index.html" class="nav-link">Home</a>
+    </nav>
+
+    <!-- Payment Details Section -->
     <div class="payment-container">
         <h1>Payment Details</h1>
         <div class="details-box">
