--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             font-size: 40px;
             text-align: center;
             margin-bottom: 10px;
-            font-family: ML-TTIndulekhaHeavy;
+            font-family: 'Noto Sans Malayalam';font-size: 22px;
             font-weight: normal;
             text-shadow: 5px 5px 8px #000000;
         }
@@ -51,6 +51,8 @@
             text-align: center;
             margin-bottom: 20px;
             text-shadow: 1px 2px 5px #060606;
+            font-family: Bahnschrift SemiBold;
+            font-size: 20px;
 
         }
 
