--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             font-size: 40px;
             text-align: center;
             margin-bottom: 10px;
-            font-family: 'Noto Sans Malayalam';font-size: 22px;
-            font-weight: normal;
+            font-family: 'Noto Sans Malayalam';
+            font-weight: bold;
             text-shadow: 5px 5px 8px #000000;
         }
         h3 {
