--- a/profexceldata.html
+++ b/profexceldata.html
@@ -35,49 +35,57 @@
         <button onclick="searchStudent()">Submit</button>
     </div>
     <br>
-    <br>
-    <!-- Photo Box -->
+    <!-- Photo Box 
     <div class="field-box photo-box">
         <img src="" alt="Student Photo">
-    </div>
+    </div> -->
     <!-- Student Details -->
     <h3>Student Information</h3>
     <div class="field-box">
         <strong>Name:</strong>
         <div id="student-name" class="detail-box"></div>
     </div>
+    <br>
     <div class="field-box">
         <strong>Class:</strong>
         <div id="student-class" class="detail-box"></div>
     </div>
+    <br>
     <div class="field-box">
         <strong>Admission Date:</strong>
         <div id="admission-date" class="detail-box"></div>
     </div>
+    <br>
     <div class="field-box">
         <strong>Admission No:</strong>
         <div id="admission-no" class="detail-box"></div>
     </div>
+    <br>
     <div class="field-box">
         <strong>Admission Fee:</strong>
         <div id="admission-fee" class="detail-box"></div>
     </div>
+    <br>
     <div class="field-box">
         <strong>Total Months:</strong>
         <div id="total-months" class="detail-box"></div>
     </div>
+    <br>
     <div class="field-box">
         <strong>Total Paid Months:</strong>
         <div id="paid-months" class="detail-box"></div>
     </div>
+    <br>
     <div class="field-box">
         <strong>Total Pending Months:</strong>
         <div id="pending-months" class="detail-box"></div>
     </div>
+    <br>
     <div class="field-box">
         <strong>Total Pending Fees (₹):</strong>
         <div id="pending-fees" class="detail-box"></div>
     </div>
+    <br>
      <!-- Action Buttons -->
      <div class="button-box">
         <button id="view-report"><a href="report.html">View Fees Report</a></button>
