--- a/profexceldata.html
+++ b/profexceldata.html
@@ -35,10 +35,6 @@
         <button onclick="searchStudent()">Submit</button>
     </div>
     <br>
-    <!-- Photo Box 
-    <div class="field-box photo-box">
-        <img src="" alt="Student Photo">
-    </div> -->
     <!-- Student Details -->
     <h3>Student Information</h3>
     <div class="field-box">
@@ -85,10 +81,9 @@
         <strong>Total Pending Fees (₹):</strong>
         <div id="pending-fees" class="detail-box"></div>
     </div>
-    <br>
      <!-- Action Buttons -->
      <div class="button-box">
-        <button id="view-report"><a href="report.html">View Fees Report</a></button>
+        <button id="view-report"><a href="contact.html">View Fees Report</a></button>
         <button id="pay-fees"><a href="upi.html">Pay Pending Fees</a></button>
     </div>
     <br>
@@ -122,6 +117,18 @@
                 .catch(error => console.error('Error loading Excel file:', error));
         }
 
+        // Format date to a readable format
+        function formatDate(dateString) {
+            if (!dateString) return "N/A";
+            const date = new Date(dateString);
+            if (isNaN(date)) return "N/A"; // If the date is invalid, return "N/A"
+            return date.toLocaleDateString('en-US', {
+                day: 'numeric',
+                month: 'long',
+                year: 'numeric'
+            });
+        }
+
         // Search Student and Display Details
         function searchStudent() {
             const selectedIndex = document.getElementById("student-name-dropdown").value;
@@ -131,7 +138,7 @@
 
                 document.getElementById("student-name").textContent = selectedStudent["Name"] || "N/A";
                 document.getElementById("student-class").textContent = selectedStudent["Class"] || "N/A";
-                document.getElementById("admission-date").textContent = selectedStudent["Admission Date"] || "N/A";
+                document.getElementById("admission-date").textContent = formatDate(selectedStudent["Admission Date"]);
                 document.getElementById("admission-no").textContent = selectedStudent["Admission No"] || "N/A";
                 document.getElementById("admission-fee").textContent = selectedStudent["Admission Fee"] || "N/A";
                 document.getElementById("total-months").textContent = selectedStudent["Total Months"] || "N/A";
