--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         
      <!-- Navigation Bar -->
      <div class="navbar">
-        <a href="#">Home</a>
+        <a href="#">Form</a>
         <a href="#" onclick="authenticate()">Fee Entry</a>
         <a href="contact.html">Contact</a>
         <a href="profexceldata.html">Profile</a>
