--- a/mkForm.html
+++ b/mkForm.html
@@ -22,12 +22,20 @@
       padding: 10px;
       margin: 5px 0 15px;
       border-radius: 5px;
-      border: 1px solid #ddd;
+      border: 1px solid #590047;
       font-family: bahnschrift;
       font-size: 20px;
     }
 
-   
+    button {
+      background: #5f0054;
+      color: #fff;
+      font-weight: bold;
+      cursor: pointer;
+      border: none;
+      padding: 10px;
+      margin: 5px 0 15px;
+    }
 
     button:hover {
       background: #0056b3;
