--- a/mkForm.html
+++ b/mkForm.html
@@ -140,7 +140,7 @@
   </form>
 
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbx9tdCq5HSEgeIbr6Nv6xtJ6nE5Y2jguPX6kIie2oqw-ed9C90FQBxqnRLvWa3mzNgO/exec';
+    const scriptURL = 'mkformdata.xlsx';
 
     const months = [
       "May 2023", "Jun 2023", "Jul 2023", "Aug 2023", "Oct 2023", "Nov 2023", "Dec 2023",
