--- a/mkForm.html
+++ b/mkForm.html
@@ -70,7 +70,7 @@
 
     <label for="name">Name</label>
     <select id="name" required>
-      <option value="" enaabled selected>Select Student</option>
+      <option value="" enaabled selected></option>
       <script>
         const students = [
           "ABHAYJITH", "ABHIJITH", "ABHIMANYU", "ABHINAV KIRAN", "ADIDEV S G", "ADIRATH",
