--- a/formnew.html
+++ b/formnew.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Receipt Entry Form</title>
-  <link rel="stylesheet" href="mkform.css">
+  <link rel="stylesheet" href="mkForm.css">
 </head>
 <body>
   <h1>Student Receipt Entry Form</h1>
