--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kalaakshethra</title>
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="Stylesprof.css">
-    <link rel="stylesheet" href="mkform.css">
+    <link rel="stylesheet" href="mkForm.css">
 
     
 
