--- a/formnew.html
+++ b/formnew.html
@@ -161,7 +161,13 @@
           alert('Error saving entry!');
         });
     }
+    // Function to clear the search input field and reset previous receipt
+    function clearSearch() {
+        document.getElementById("search-receipt").value = ""; // Clear the search input field
+    }
 
     function clearForm() {
       document.getElementById("studentForm").reset();
       document
+
+     
